[package]
name = "nihao-usb"
version = "0.1.0"
authors = ["luojia65 <me@luojia.cc>"]
edition = "2018"

[dependencies]

[target.'cfg(windows)'.dependencies.winapi]
version = "*"
features = [
    "winbase", "winerror", "errhandlingapi",
    "handleapi", "fileapi", "heapapi",
    "setupapi", "winusb", "usbspec", "winusbio", "usbiodef",
]
